[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://WorldEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://EndGameArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://ground.meshlib" type="MeshLibrary" id=6]
[ext_resource path="res://Assets/ComicNeue-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Blocker.tscn" type="PackedScene" id=8]
[ext_resource path="res://VillageSoundsPlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://HouseBetter.tscn" type="PackedScene" id=10]

[sub_resource type="Curve3D" id=1]
_data = {
"points": PoolVector3Array( -19.1905, -2.86102e-006, 18.2662, 0, 0, 0, 17.7146, -11.8884, 10.5556, 0, 0, 0, 0, 0, 0, 18.3456, -11.8254, -11.3008, 0, 0, 0, 0, 0, 0, 16.5673, -11.7858, -34.8747, 0, 0, 0, 0, 0, 0, 16.5653, -11.7858, -58.2221, 0, 0, 0, 0, 0, 0, 12.4095, -11.7856, -120.303, 6.75383, -0.00158691, -0.848465, -6.75383, 0.00158691, 0.848465, 11.5797, -11.7853, -161.826, 11.7126, 0.00149536, -7.95857, -11.7126, -0.00149536, 7.95857, -11.72, -11.7853, -161.668, 0, 0, 0, 0, 0, 0, -15.4106, -11.7856, -134.33, 0, 0, 0, 0, 0, 0, -16.6744, -11.7856, -96.3033, 0, 0, 0, 0, 0, 0, -15.4797, -11.7858, -67.8491, 0, 0, 0, 0, 0, 0, -20.0343, -11.7858, -43.4218, 0, 0, 0, 0, 0, 0, -19.629, -11.7858, -12.0847, 0, 0, 0, 0, 0, 0, -16.1193, -11.7858, 21.7498, 4.27527, 0, 29.6211, -4.27527, 0, -29.6211, 17.3315, -11.8884, 11.7104 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 120
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
resource_name = "Help"

[sub_resource type="Animation" id=5]
length = 16.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.2, 15.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/RichTextLabel2:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7.1, 10.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/RichTextLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/RichTextLabel3:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 12.7, 14.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/RichTextLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.1, 6.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/RichTextLabel2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.1, 12.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 7 )

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.32791, 0 )

[node name="UserInterface" parent="." instance=ExtResource( 4 )]

[node name="EndgameArea" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.9877, -182.904 )

[node name="Path" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17.1038, 0 )
curve = SubResource( 1 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 6 )
cell_size = Vector3( 25, 1, 25 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 1, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 536870912, 65535, 0, 1, 0, 1, 1, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 1, 0, 65528, 1, 1, 65528, 0, 2, 65528, 0, 3, 65528, 0, 4, 65528, 0, 5, 65528, 536870912, 6, 65528, 0, 65530, 65528, 0, 65531, 65528, 536870912, 65532, 65528, 0, 65533, 65528, 0, 65534, 65528, 536870912, 65535, 65528, 1, 0, 65529, 1, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 1610612736, 5, 65529, 0, 6, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 536870913, 0, 65530, 1, 1, 65530, 0, 2, 65530, 536870912, 3, 65530, 0, 4, 65530, 0, 5, 65530, 536870912, 6, 65530, 0, 65530, 65530, 0, 65531, 65530, 0, 65532, 65530, 0, 65533, 65530, 536870912, 65534, 65530, 0, 65535, 65530, 1, 0, 65531, 1, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 6, 65531, 0, 65530, 65531, 536870912, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 536870912, 65535, 65531, 1, 0, 65532, 536870913, 1, 65532, 536870912, 2, 65532, 0, 3, 65532, 536870912, 4, 65532, 0, 5, 65532, 0, 6, 65532, 536870912, 65530, 65532, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 1, 0, 65533, 1, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 6, 65533, 0, 65530, 65533, 0, 65531, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 1, 0, 65534, 1, 1, 65534, 0, 2, 65534, 0, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 6, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 1, 0, 65535, 536870913, 1, 65535, 0, 2, 65535, 0, 3, 65535, 536870912, 4, 65535, 0, 5, 65535, 0, 6, 65535, 0, 65530, 65535, 0, 65531, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Control" type="Control" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TransitionBackground" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
visible = false
anchor_right = 1.0
margin_left = 79.4265
margin_top = 108.11
margin_right = -221.574
margin_bottom = 294.11
rect_pivot_offset = Vector2( 300, 180 )
custom_fonts/normal_font = SubResource( 2 )
text = "“The mere touching of the clothes,” wrote Boccaccio, “appeared to itself to communicate the malady to the toucher.”"

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
visible = false
anchor_right = 1.0
margin_left = 278.0
margin_top = 340.0
margin_right = -23.0
margin_bottom = 531.0
rect_pivot_offset = Vector2( 300, 180 )
custom_fonts/normal_font = SubResource( 2 )
text = "They know that the bacillus travels from person to person through the air, as well as through the bite of infected fleas ..."

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
anchor_right = 1.0
margin_left = 276.285
margin_top = 243.277
margin_right = -206.715
margin_bottom = 402.277
rect_pivot_offset = Vector2( 300, 180 )
custom_fonts/normal_font = SubResource( 3 )
text = "and rats."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "Transition"
anims/Help = SubResource( 4 )
anims/Transition = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Blocker" parent="." instance=ExtResource( 8 )]

[node name="Blocker2" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.986, -255.396 )

[node name="VillageSoundsPlayer" parent="." instance=ExtResource( 9 )]

[node name="Houses" type="Spatial" parent="."]

[node name="House" parent="Houses" instance=ExtResource( 10 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -47, 0, 0 )

[node name="House2" parent="Houses" instance=ExtResource( 10 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -47, 0, -101.941 )

[node name="House3" parent="Houses" instance=ExtResource( 10 )]
transform = Transform( -9.99809, 0, -0.195409, 0, 10, 0, 0.195409, 0, -9.99809, 44.702, 0, -84.9532 )

[node name="House4" parent="Houses" instance=ExtResource( 10 )]
transform = Transform( -9.97793, 0, 0.664086, 0, 10, 0, -0.664086, 0, -9.97793, 43.5901, 0, -8.00928 )

[node name="House5" parent="Houses" instance=ExtResource( 10 )]
transform = Transform( -9.99809, 0, -0.195409, 0, 10, 0, 0.195409, 0, -9.99809, 46.7523, 0, -174.259 )

[node name="TutorialLabel" type="Label" parent="."]
visible = false
margin_left = 647.65
margin_top = 27.9917
margin_right = 1005.65
margin_bottom = 185.992
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Infect the citizens by touching them,
the red circile indicates
whether the person has been infected or not.
After infecting every single person on the map,
go to the yellow circle to advance to the next level!"
